# main_contract

./: .gitignore  CLAUDE.md  CONTRATOS_Y_DIRECCIONES.md  README.md  wallets.txt
.github/workflows/: soroban.yml
backend/: .env.example  .gitignore  CONTRATOS.txt  CONTRATOS_UTF8.txt  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  ts_errors.txt  tsconfig.json
backend/prisma/: schema.manual.backup.prisma  schema.prisma  seed.ts
backend/prisma/migrations/20260318143000_init/: migration.sql
backend/scripts/: clean-users.ts  clear.ts  deploy-contracts.ts  fix-seated-events.ts  rescue.js
backend/src/: indexer.ts  server.ts
contracts/: .env.example  README.md
contracts/.cargo/: config.toml
contracts/contracts/event_contract/: Cargo.toml
contracts/contracts/event_contract/src/: lib.rs  test.rs
contracts/contracts/factory_contract/: Cargo.toml
contracts/contracts/factory_contract/src/: lib.rs  test.rs
contracts/contracts/factory_contract/test_snapshots/test/: test_create_event_duplicate_contract_panics.1.json  test_create_event_duplicate_id_panics.1.json  test_create_event_invalid_fees_panics.1.json  test_create_event_success.1.json  test_event_contract_funciona_despues_registrado.1.json  test_initialize_double_panics.1.json  test_initialize_success.1.json  test_two_events_independent.1.json  test_update_wasm_hash_success.1.json
docs/: ARCHITECTURE.md  SCHEMA_POSTGRESQL.sql
frontend/: package-lock.json  package.json
frontend/src/components/: ConnectWallet.tsx
frontend/src/pages/: AdminDashboard.tsx  EventDetail.tsx
(+39 files in other folders)
